<resources>
    <string name="app_name">Exercise 1 PAM</string>
    <string name="color">color</string>
    <string name="nWelcome">Selamat Datang Kembali</string>
    <string name="tNama">Nama</string>
    <string name="tPass">Password</string>
    <string name="tEmail">Email</string>
    <string name="tRepass">Re-Password</string>
    <string name="nNama">Masukkan Nama</string>
    <string name="nPass">Masukkan Password</string>
    <string name="nSign">SIGN IN</string>
    <string name="nEmail">Masukkan Email</string>
    <string name="nRepass">Masukkan Password Kembali</string>
    <string name="tBaru">Baru di Aplikasi?</string>
    <string name="nRegister">Registrasi</string>
    <string name="nSelamat">Selamat Datang</string>
    <string name="tTask">Tugas</string>
    <string name="nTask">Masukkan Nama Tugas</string>
    <string name="tJenis">Jenis Tugas</string>
    <string name="nJenis">Masukkan Jenis Tugas</string>
    <string name="tTime">Deadline Tugas</string>
    <string name="nTime">Masukkan Durasi Tugas</string>
    <string name="nlogo">Logo</string>
    <string name="mSubmit">Submit</string>
    <string name="mLogout">Logout</string>

</resources>